--- a/FYPTesting_JSDetection.ipynb
+++ b/FYPTesting_JSDetection.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Code below will visit the websites to check if they are reachabale or active."
+        "Code below will visit the websites to check if they are reachable or active."
       ],
       "metadata": {
         "id": "EpOiA8x9xqwI"
